fixed background zoom and customized scrollbar

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ canvas {
 
 main {
   position: absolute;
-  color: #820933;
+  color: #7c77c4;
   text-align: center;
   width: 100%;
   left: 0px;
